--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.css
@@ -98,6 +98,12 @@
     width: 505px;
 }
 
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .custom-red-button {
   color: transparent;
   background-color: transparent;
