--- a/src/app/shared/components/quotation-landing-screen/quotation-landing-screen.component.html
+++ b/src/app/shared/components/quotation-landing-screen/quotation-landing-screen.component.html
@@ -1,5 +1,5 @@
-<p-tabView>
-  <p-tabPanel header="IND Life" [selected]="true">
+<p-tabView [activeIndex]='activeIndex'>
+  <p-tabPanel header="IND Life">
     <div>
       <div>
         <div>
