--- a/src/app/features/lms/grp/components/quotation/components/quick/quick.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/quick/quick.component.css
@@ -128,6 +128,10 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+.invalid-feedback {
+  padding-left: 10px;
+}
+
 @media screen and (max-width:1400px) and (min-width:180px),
 (max-width:280px) {
   /* .container {
